# higrep

./: Cargo.toml  README.md
src/: app.rs  args.rs  file_entry.rs  grep_match.rs  main.rs  ui.rs
src/ig/: mod.rs  search_config.rs  searcher.rs  sink.rs
src/ui/: app.rs  bottom_bar.rs  cmd_parse.rs  context_viewer.rs  editor.rs  input_handler.rs  mod.rs  result_list.rs  scroll_offset_list.rs  search_popup.rs  soft_warp.rs
