[package]
name = "higrep"
version = "1.3.0"
authors = ["Konrad Szymoniak <szymoniak.konrad@gmail.com>","黄金"]
license = "MIT"
description = "交互式grep"
homepage = "https://github.com/HuangJinAmm/higrep"
documentation = "https://github.com/HuangJinAmm/higrep"
repository = "https://github.com/HuangJinAmm/higrep"
keywords = ["cli", "tui", "grep"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "higrep"
path = "src/main.rs"

[dependencies]
grep = "0.2.11"
ignore = "0.4.18"
clap = { version = "3.1.6", features = ["derive", "env"] }
crossterm = "0.26.0"
tui = { version = "0.19.0", default-features = false, features = ['crossterm'] }
unicode-width = "0.1"
itertools = "0.10.0"
anyhow = "1.0.38"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.0"
syntect = "5.0.0"
regex = "1"
lazy_static = "1.4.0"

[dev-dependencies]
lazy_static = "1.4.0"
test-case = "2.0.0"
mockall = "0.11.0"
