[package]
name = "higrep"
version = "1.2.0"
authors = ["Konrad Szymoniak <szymoniak.konrad@gmail.com>","HuangjinAmm"]
license = "MIT"
description = "Interactive Grep"
homepage = "https://github.com/konradsz/igrep"
documentation = "https://github.com/konradsz/igrep"
repository = "https://github.com/konradsz/igrep"
keywords = ["cli", "tui", "grep"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "hig"
path = "src/main.rs"

[dependencies]
grep = "0.2.8"
ignore = "0.4.18"
clap = { version = "3.1.6", features = ["derive", "env"] }
crossterm = "0.23.0"
ratatui = { version = "0.21.0", default-features = false, features = ['crossterm'] }
unicode-width = "0.1"
itertools = "0.10.0"
anyhow = "1.0.38"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24.0"
syntect = "5.0.0"
lazy_static = "1.4.0"
regex = "1"

[dev-dependencies]
test-case = "2.0.0"
mockall = "0.11.0"

[build-dependencies]
anyhow = "1.0.38"
